# Integrated-Exploration

./: .gitignore  CMakeLists.txt  metricas  package.xml
config/: cmd_vel_mux_all.yaml  cmd_vel_robot1.yaml  cmd_vel_robot2.yaml
config/camera/: coords.rviz
config/explorer/: params.yaml  test.yaml
config/gazebo/: big.sdf  freiburg.sdf  ground_truth.sdf  maze.sdf  model_teste  robots_small.sdf  teste  teste.sdf  vamo.sdf  wg_world.sdf
config/gazebo/icra/: 1.sdf  11.sdf  12.sdf  13.sdf  14.sdf  16.sdf  16.sdf~  17.sdf  18.sdf  19.sdf  2.sdf  20.sdf  3.sdf  4.sdf  5.sdf  6.sdf  7.sdf  7.sdf~  8.sdf  8.sdf~  9.sdf
config/gmapping/: gmapping.yaml  gmapping_multi.yaml  gmapping_stage.yaml
config/move_base/: costmap_common.yaml  costmap_common_multi.yaml  costmap_common_stage.yaml  costmap_global.yaml  costmap_global_multi.yaml  costmap_global_stage.yaml  costmap_local.yaml  costmap_local_multi.yaml  costmap_local_stage.yaml  move_base.yaml~  move_base_multi.yaml  move_base_stage.yaml
config/rviz/: robot_0.rviz  robot_1.rviz  settings.rviz  settings_robot1.rviz  settings_robot2.rviz
config/sick_wrapper/: LMS_200.yaml
data/: roslaunch.py
data/analysis/: check_redo.ipynb  metrics.ipynb
data/config/: 1_autolab.json  2_robot_dist_cost_inf_gain.json  3_robot_dist_cost_inf_gain.json  4_robot_dist_cost_inf_gain.json  5_robot_dist_cost_inf_gain.json  6_robot_dist_cost_inf_gain.json  7_robot_dist_cost_inf_gain.json  8_robot_dist_cost_inf_gain.json  n_autolab_info_ex.json  n_autolab_merge.json  n_robot_coordination.json  single_robot_dist_cost.json  single_robot_dist_cost_inf_gain.json  single_robot_inf_gain.json
debug/: robot_0_full.csv  robot_0_time.csv
debug/paths/: robot_0_0.0_0.0_path.txt  robot_0_0.0_1.0_path.txt  robot_0_0.0_10.0_path.txt  robot_0_0.0_2.0_path.txt  robot_0_0.0_3.0_path.txt  robot_0_0.0_4.0_path.txt  robot_0_0.0_5.0_path.txt  robot_0_0.0_6.0_path.txt  robot_0_0.0_7.0_path.txt  robot_0_0.0_8.0_path.txt  robot_0_0.0_9.0_path.txt  robot_0_1.0_0.0_path.txt  robot_0_1.0_1.0_path.txt  robot_0_1.0_10.0_path.txt  robot_0_1.0_2.0_path.txt  robot_0_1.0_3.0_path.txt  robot_0_1.0_4.0_path.txt  robot_0_1.0_5.0_path.txt  robot_0_1.0_6.0_path.txt  robot_0_1.0_7.0_path.txt  robot_0_1.0_8.0_path.txt  robot_0_1.0_9.0_path.txt  robot_0_10.0_0.0_path.txt  robot_0_10.0_1.0_path.txt  robot_0_10.0_10.0_path.txt  robot_0_10.0_2.0_path.txt  robot_0_10.0_3.0_path.txt  robot_0_10.0_4.0_path.txt  robot_0_10.0_5.0_path.txt  robot_0_10.0_6.0_path.txt  robot_0_10.0_7.0_path.txt  robot_0_10.0_8.0_path.txt  robot_0_10.0_9.0_path.txt  robot_0_2.0_0.0_path.txt  robot_0_2.0_1.0_path.txt  robot_0_2.0_10.0_path.txt  robot_0_2.0_2.0_path.txt  robot_0_2.0_3.0_path.txt  robot_0_2.0_4.0_path.txt  robot_0_2.0_5.0_path.txt  (+81 more)
launch/: ar-track.launch  core.launch  explorer.launch  explorer_robot1.launch  explorer_robot2.launch  icra_ent.launch  icra_info.launch  launch.sh  main.launch  master.launch  master_info.launch  master_single.launch  minpos.launch  multi_navigation_gmapping.launch  multi_navigation_gmapping_real.launch  new_explorer.launch  new_explorer_single.launch  no_map_node.launch  no_master_ent.launch  no_master_ent.launch~  no_master_inf.launch  robot.launch  robot1.launch  robot_info.launch  save_video.launch  sim.launch  single.launch  single_master.launch  single_no_master.launch  ui.launch  video.launch
launch/apps/: frontier_explorer.launch  gmapping.launch
launch/core/: gazebo.launch  urdf.launch
launch/include/: single_robot.launch  single_turtlebot.launch
launch/stage_launch/: core.launch  robot.launch  robot_0.launch  robot_1.launch  sim.launch
launch/test/: turtlebot_in_stage.launch
launch/test_turtlebot/: laser_drift.launch  single_turtlebot.launch  turtlebot_in_stage.launch  turtlebot_stage.launch
msg/: OccMap.msg  Signal.msg  mapStruct.msg~  myMsg.msg~  poses.msg  signal.msg
param/: costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  global_planner_params.yaml  local_costmap_params.yaml  navfn_global_planner_params.yaml
rviz/: exploration.rviz  robot_0.rviz  robot_1.rviz  robot_2.rviz  test_drift.rviz
scripts/: laser_filter.py  map_server.py  pot_field.py  traveled_distance.py
src/: distance_cost.cc  explorer.cc  frontier.cc  frontier_explorer.cc  frontier_tools.cc  frontier_tools.h  frontier_window.cc  frontier_window_explorer.cc  frontiers.h  gazebo_bridge.cc  goal_tools.cc  image_save.cc  information_gain.cc  laserscan.cc  map_merge.cc  map_node.cc  map_node_icra.cc  map_node_real.cc  map_tools.cc  merge.cc  minpos.cc  minpos_explorer.cc  multi_frontier_explorer.cc  multi_window_explorer.cc  multi_window_explorer_real.cc  new_explorer.cc  new_explorer_dist.cc  new_explorer_ent.cc  new_explorer_inf.cc  new_explorer_inf.cc.txt  new_explorer_multi.cc  new_explorer_real_ent.cc  new_explorer_real_info.cc  new_frontier.cc  new_map_node.cc  new_utility_function.cc  new_wavefront.cc  new_window.cc  print_coords.cc  save_map.cc  (+7 more)
urdf/: kobuki_hexagons_r200.urdf.xacro  pioneer3at.xacro~
world/: autolab_1.world  autolab_2.world  autolab_3.world  autolab_4.world  autolab_5.world  autolab_6.world  autolab_7.world  autolab_8.world  exploration.world  exploration_1.world  exploration_2.world  exploration_3.world  exploration_4.world  exploration_5.world  exploration_6.world  exploration_7.world  exploration_8.world  pioneer.inc  pioneer2dx.world  pioneer3at.inc  pioneer3at.world  pioneer3at_1.world  pioneer3at_2.world  teste.world  turtlebot.inc
world/turtlebot/: exploration.world
