<?xml version="1.0"?>
<package>
  <name>pioneer3at</name>
  <version>0.1.0</version>
  <description>Pioneer 3AT ROS package with urdf and sample launch files.</description>
  <maintainer email="dereck@gmail.com">Dereck Wonnacott</maintainer>
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/</url>
  <url type="repository">https://github.com/dawonn/ros-Pioneer3AT</url>
  <url type="bugtracker">https://github.com/dawonn/ros-Pioneer3AT/issues</url>

  <author email="dereck@gmail.com">Dereck Wonnacott</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>  
  <build_depend>roslib</build_depend>  
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>cv_bridge</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>joy</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>cv_bridge</run_depend>
  
  <run_depend>amcl</run_depend>
  <run_depend>gmapping</run_depend>
  <run_depend>move_base</run_depend>
</package>
